Corrects distortion slider styling for Firefox.

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,15 @@ input[id=distortion_slider]::-webkit-slider-thumb {
   opacity: 0.9;
 }
 
+input[id=distortion_slider]::-moz-range-thumb {
+  width: 100px;
+  height: 25px;
+  margin-top: -5px;
+  border-radius: 5px;
+  background: #2394F5;
+  opacity: 0.9;
+}
+
 input[id=distortion_slider]{
   width: 100%;
 }
